2016-05-05  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c, dict.c: Completion is supported.

	* ml_vt100_parser.c: vt100_parser->yeild = 0 (specific to framebuffer) at
	  the end of parse_vt100_parser() is removed.

2016-05-04  Araki Ken  <arakiken@users.sf.net>

	* x_im_status_screen.c, win32/x_window.c: Hack for win32gdi is moved from
	  x_im_status_screen.c to win32/x_window.c

	* x_im_status_screen-cocoa.m: Status screen is shown before calling
	  x_im_status_screen_t::show().

2016-05-04  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c:
	  - Direct input triggered by 'l' key is available in editing a word
	    to be newly registerd.
	  - Status window is shown while skk is enabled.
	  - Full width alphabets input triggerd by 'L' is available.
	  - (concat "...") is partially available.
	  - It is possible to register a new word containing '/' and ';'.

	* hb.c: Compiling error is fixed.

	* configure.in: hb-coretext.h is checked on MacOSX/Cocoa.

2016-05-01  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c: Ctrl+g resets preediting states.

2016-05-01  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c: Wrong parsing of comment string staring with ';' is fixed.

	* skk/dict.c: winsock is supported.

	* configure.in: skk is enabled on win32gdi without cygwin.

	* x_window_cairo.c: A bug which dropped almost all glyph complementary fonts
	  is fixed.

2016-05-01  Araki Ken  <arakiken@users.sf.net>

	* quartz/x_im_status_screen-cocoa.m: Added for input method plugin.

	* quartz/x_window.c: x_window_translate_coordinates() is implemented by using
	  window_get_position().

	* cocoa.[hm]:
	  - window_get_position() is added.
	  - NSShiftMask isn't ignored in insertText().
	  - x_display_t::width and x_display_t::height are set in viewDidMoveToWindow.

	* im_skk.c, im_wnn.c: dha dhi dhu dhe and dho are supported.

	* skk/dict.c: input_method option accepts whether skk dictionary or skk server
	  uses utf8 instead of eucjp.
	  (e.g. --im skk:localhost:utf8)
